--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Play Tic-Tac-Toe!</h1>
+    </header>
+
+    <section>
+        <div id="pick-mode"></div>
+        <div id="pvp-get-names"></div>
+        <div id="pve-get-name"></div>
+        <div id="pvp-turn"></div>
+        <div id="pve-turn"></div>
+        <div id="pvp-winner"></div>
+        <div id="pve-winner"></div>
+    </section>
+
+    <main>
+        <div class="game-grid">
+            <div id="1"></div>
+            <div id="2"></div>
+            <div id="3"></div>
+            <div id="4"></div>
+            <div id="5"></div>
+            <div id="6"></div>
+            <div id="7"></div>
+            <div id="8"></div>
+            <div id="9"></div>
+        </div>
+    </main>
+
+    <footer>
+        <p>2023 © Simone Timi</p><a href="https://github.com/simonetimi" target="_blank">
+            <img src="images/github-mark-white.png" id="github" alt="GitHub logo"></a>
+    </p>
+    </footer>
 </body>
 </html>
